Remove new line.

--- a/.github/workflows/buil-osm-base.yml
+++ b/.github/workflows/buil-osm-base.yml
@@ -35,7 +35,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - 
         name: Add All Files to Image
-        run: echo "\nADD . /app" >> osm-rails-port/Dockerfile
+        run: echo "ADD . /app" >> osm-rails-port/Dockerfile
       -
         name: Build and push
         uses: docker/build-push-action@v2
