--- a/.github/workflows/build-osm-base.yml
+++ b/.github/workflows/build-osm-base.yml
@@ -1,9 +1,9 @@
-name: Build OSM PSQL
+name: Build OSM
 
 on:
   push:
-    tag:
-      - 'v*'
+    branches:
+      - refs/tags/v*
 
 jobs:
    
@@ -33,11 +33,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Add All Files to Image
+        run: |
+          echo "ADD . /app" >> osm-rails-port/Dockerfile
+          cat osm-rails-port/Dockerfile
       -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: osm-rails-port/
-          file: osm-rails-port/docker/postgres/Dockerfile
           push: true
-          tags: sparkgeo/osm-rails-port:${{ steps.get_version.outputs.VERSION }}-psql
+          tags: sparkgeo/osm-rails-port:${{ steps.get_version.outputs.VERSION }}
