--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,7 @@
+# Borrowed from https://github.com/openstreetmap/openstreetmap-website/blob/master/docker-compose.yml
 version: "3"
 
 services:
-
-## These are for fetching external public repos to build.
-  # fetch-osm:
-  #   build: 
-  #     dockerfile: fetch.Dockerfile
-  #   command: git clone https://github.com/openstreetmap/openstreetmap-website.git /target
-  #   volumes:
-  #     - ./osm-rails-port/:/target
-
-  # fetch-id:
-  #   build: 
-  #     dockerfile: fetch.Dockerfile
-  #   command: git clone --depth=1 https://github.com/openstreetmap/iD.git /target
-  #   volumes:
-  #     - ./iD/src:/target
-  
-  # editor:
-  #   build:
-  #     context: iD/
-  #   # volumes:
-  #   #   - ./iD/src:/app
-  #   ports:
-  #     - "3001:8080"
-  #   # depends_on:
-  #   #   - fetch-id
 
   web:
     build:
@@ -42,14 +18,10 @@ services:
       - "3000:3000"
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     depends_on:
-      # - fetch-osm
       - db
 
   db:
-    image: sparkgeo/osm-rails-port:v0.5-psql
-    # build:
-    #   context: osm-rails-port/
-    #   dockerfile: docker/postgres/Dockerfile
+    image: sparkgeo/osm-rails-port:v0.6-psql
     ports:
       - "5432:5432"
     environment:
@@ -58,30 +30,7 @@ services:
     volumes:
       # Mount the Postgres data directory so it persists between runs
       - db-data:/var/lib/postgresql/data
-    # depends_on:
-      # - fetch-osm
   
-  # clean-osm:
-  #   build: 
-  #     dockerfile: fetch.Dockerfile
-  #   command: find /target -delete
-  #   volumes:
-  #     - ./osm-rails-port/:/target
-  #   depends_on:
-  #     - fetch-osm
-  #     - db
-  #     - web
-  
-  # clean-id:
-  #   build: 
-  #     dockerfile: fetch.Dockerfile
-  #   command: find /target -delete
-  #   volumes:
-  #     - ./iD/src/:/target
-  #   depends_on:
-  #     - fetch-id
-  #     - editor
-
 volumes:
   web-traces:
   web-images:
