--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - web-images:/home/osm/images
     ports:
       - "3000:3000"
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    # command: bundle exec rails s -p 3000 -b '0.0.0.0'
     depends_on:
       - db
 
