--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,8 @@ services:
     build:
       context: osm-custom/
     volumes:
-      # - ./osm-rails-port/:/app
-      # Prevent these directories from mounting so they're not shared between host OS and Docker
-      # - /app/node_modules/
-      # - /app/tmp/
-      # Mount these upload directories so they persist between runs
+      - ./ogr2osm/:/ogr2osm/
+       # Mount these upload directories so they persist between runs
       - web-traces:/home/osm/traces
       - web-images:/home/osm/images
     ports:
@@ -23,6 +20,9 @@ services:
       PGUSER: postgres
       PGPASSWORD: postgres
       PGHOST: db
+      SUPERUSER_EMAIL: super@local.local
+      SUPERUSER_PWD: 12345678
+      OSM_URL: http://localhost:3000
     # command: bundle exec rails s -p 3000 -b '0.0.0.0'
     depends_on:
       - db
